# psfreader

./: README.md  pyproject.toml
src/: try_psfreader.py
src/psfreader/: __init__.py  psfdata.py
