[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"

[project]
name = "psfreader"
version = "1.0"
authors = [
  { name="paul", email="paul.mateman@imec.nl" },
]
description = "A pure python reader for PSF (Parameter Storage Format) simulation result files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/imec-myhdl/psfreader"
